1) Quick fix for bolts being useable as arrows.