@@ -37,7 +37,7 @@ allprojects {
     targetCompatibility = 1.8
 }
 
-version = "0.9.2.1"
+version = "0.9.2.2"
 group= "modernmetals" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ModernMetals"
 
