@@ -28,13 +28,16 @@ import net.minecraftforge.fml.common.event.FMLPostInitializationEvent;
 		modid = ModernMetals.MODID,
 		name = ModernMetals.NAME,
 		version = ModernMetals.VERSION,
-		dependencies = "required-after:Forge;required-after:basemetals")
+		dependencies = "required-after:Forge@[12.16.0.1865,);required-after:basemetals@[2.2,)",
+		acceptedMinecraftVersions = "1.9",
+		//certificateFingerprint = "",
+		updateJSON = "https://raw.githubusercontent.com/jriwanek/ModernMetals/master/update.json")
 public class ModernMetals
 {
     public static ModernMetals INSTANCE = null;
     public static final String MODID = "modernmetals";
     public static final String NAME = "Modern Metals";
-    public static final String VERSION = "0.9.2.1";
+    public static final String VERSION = "0.9.2.2";
 
 	/** All ore-spawn files discovered in the ore-spawn folder */
 	public static final List<Path> oreSpawnConfigFiles = new LinkedList<>();
