@@ -111,9 +111,9 @@ public class DataConstants {
 //+ "\n				{"
 //+ "\n					\"blockID\":\"modernmetals:titanium_ore\","
 //+ "\n					\"size\":8,"
-+ "\n					\"variation\":4,"
-+ "\n					\"frequency\":20,"
-+ "\n					\"minHeight\":0,"
+//+ "\n					\"variation\":4,"
+//+ "\n					\"frequency\":20,"
+//+ "\n					\"minHeight\":0,"
 //+ "\n					\"maxHeight\":96"
 //+ "\n				},"
 + "\n				{"
